src/cli/settings/snapshots/rtx__cli__settings__set__test__settings_set-2.snap
---
source: src/cli/settings/set.rs
expression: stdout
---
missing_runtime_behavior = autoinstall
always_keep_download = true
legacy_version_file = false
disable_plugin_short_name_repository = true
plugin_autoupdate_last_check_duration = 1
plugin_repository_last_check_duration = 2

